Исправил ошибки в *.scss для прохождения тестов stylelint

--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -29,7 +29,7 @@
   }
 
   &:active {
-    color: rgba($color: #46c1ae, $alpha: 0.3)
+    color: rgba($color: #46c1ae, $alpha: 0.3);
   }
 
   &::after {
