--- a/source/sass/blocks/featured.scss
+++ b/source/sass/blocks/featured.scss
@@ -7,7 +7,7 @@
     width: 100%;
     margin-top: 42px;
     height: 6px;
-    background-image: url(../img/bg-zigzag-line.svg);
+    background-image: url("../img/bg-zigzag-line.svg");
     background-repeat: repeat-x;
     background-position: 0 0;
     background-size: contain;
@@ -65,4 +65,3 @@
   font-weight: bold;
   text-align: center;
 }
-
