--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -7,7 +7,7 @@
     width: 100%;
     margin-top: 42px;
     height: 6px;
-    background-image: url(../img/bg-zigzag-line.svg);
+    background-image: url("../img/bg-zigzag-line.svg");
     background-repeat: repeat-x;
     background-position: 0 0;
     background-size: contain;
@@ -75,4 +75,3 @@
 .reviews__toggle:first-child {
   border-right: none;
 }
-
