--- a/source/sass/fonts.scss
+++ b/source/sass/fonts.scss
@@ -3,9 +3,7 @@
   font-weight: normal;
   font-style: normal;
 
-  src: local("Open Sans Regular"), local("OpenSans-Regular"),
-  url("../fonts/opensans.woff") format("woff"),
-  url("../fonts/opensans.woff2") format("woff2");
+  src: local("Open Sans Regular"), local("OpenSans-Regular"), url("../fonts/opensans.woff") format("woff"), url("../fonts/opensans.woff2") format("woff2");
 }
 
 @font-face {
@@ -13,7 +11,5 @@
   font-weight: bold;
   font-style: normal;
 
-  src: local("Open Sans Bold"), local("OpenSans-Bold"),
-  url("../fonts/opensansbold.woff") format("woff"),
-  url("../fonts/opensansbold.woff2") format("woff2");
+  src: local("Open Sans Bold"), local("OpenSans-Bold"), url("../fonts/opensansbold.woff") format("woff"), url("../fonts/opensansbold.woff2") format("woff2");
 }
