--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,1 +1,19 @@
-
+@import "variables.scss";
+@import "mixins.scss";
+@import "fonts.scss";
+@import "normalize.scss";
+@import "globals.scss";
+@import "visually-hidden.scss";
+@import "blocks/page.scss";
+@import "blocks/button.scss";
+@import "blocks/header.scss";
+@import "blocks/navigation.scss";
+@import "blocks/hero.scss";
+@import "blocks/title.scss";
+@import "blocks/featured.scss";
+@import "blocks/datasheet.scss";
+@import "blocks/about.scss";
+@import "blocks/reviews.scss";
+@import "blocks/contacts.scss";
+@import "blocks/footer.scss";
+@import "blocks/social.scss";
