Добавил модификатор открытой кнопки меню в стили блока header

--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -34,3 +34,9 @@
   background-repeat: no-repeat;
   background-position: 0 0;
 }
+
+.header__toggle--open {
+  background-image: url("../img/icon-menu-open.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
