Изменил название переменной цвета с -color на -text

--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -49,7 +49,7 @@
 .reviews__author-link {
   font-weight: normal;
   line-height: 30px;
-  color: $link-color;
+  color: $primary-text;
 }
 
 .reviews__toggles {
