--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -21,7 +21,7 @@
   font-size: 19px;
   font-weight: bold;
   line-height: 18px;
-  color: $link-color;
+  color: $primary-text;
 }
 
 .footer__link-icon {
