--- a/source/sass/blocks/modal-basket.scss
+++ b/source/sass/blocks/modal-basket.scss
@@ -47,7 +47,7 @@
 
   &:hover,
   &:focus {
-    color: $text-color;
+    color: $secondary-text;
 
     background-color: transparent;
     border-color: #c7c7c7;
