--- a/source/sass/blocks/navigation.scss
+++ b/source/sass/blocks/navigation.scss
@@ -25,14 +25,14 @@
   font-size: 17px;
   line-height: 24px;
   font-weight: bold;
-  color: $link-color;
+  color: $primary-text;
 
   &:hover {
-    color: rgba($color: $link-color, $alpha: 0.6);
+    color: rgba($color: $primary-text, $alpha: 0.6);
   }
 
   &:active {
-    color: rgba($color: $link-color, $alpha: 0.3);
+    color: rgba($color: $primary-text, $alpha: 0.3);
   }
 }
 
