--- a/source/sass/blocks/video.scss
+++ b/source/sass/blocks/video.scss
@@ -4,6 +4,14 @@
   padding-bottom: 33px;
 
   border: 1px solid #ececec;
+
+  &:hover {
+    box-shadow: 0 6px 10px 0 rgba($color: $primary-text, $alpha: 0.1);
+  }
+
+  &:active {
+    box-shadow: 0 3px 5px 0 rgba($color: $primary-text, $alpha: 0.1);
+  }
 }
 
 .video__title {
