--- a/source/sass/blocks/featured.scss
+++ b/source/sass/blocks/featured.scss
@@ -1,12 +1,14 @@
 .featured {
-  margin-bottom: 33px;
+  padding-top: 30px;
 
   &::after {
     content: "";
+
     display: block;
     width: 100%;
-    margin-top: 42px;
     height: 6px;
+    margin-top: 42px;
+
     background-image: url("../img/bg-zigzag-line.svg");
     background-repeat: repeat-x;
     background-position: 0 0;
@@ -24,6 +26,7 @@
   @include margin-clean;
 
   margin-bottom: 5px;
+
   letter-spacing: -0.5px;
 }
 
@@ -45,6 +48,7 @@
   @include margin-clean;
 
   margin-bottom: 20px;
+
   line-height: 24px;
 }
 
@@ -61,6 +65,7 @@
   @include margin-clean;
 
   margin-bottom: 20px;
+
   font-size: 17px;
   line-height: 24px;
   font-weight: bold;
