--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -18,6 +18,7 @@
 @import "blocks/contacts.scss";
 @import "blocks/footer.scss";
 @import "blocks/social.scss";
+@import "blocks/order-form.scss";
 @import "blocks/form.scss";
 @import "blocks/products-list.scss";
 @import "blocks/product.scss";
