--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -20,7 +20,7 @@
 @import "blocks/social.scss";
 @import "blocks/order-form.scss";
 @import "blocks/form.scss";
-@import "blocks/products-list.scss";
+@import "blocks/catalog.scss";
 @import "blocks/product.scss";
 @import "blocks/video.scss";
 @import "blocks/overlay.scss";
