В стилях блока main.scss добавил padding-bottom для страницы каталога

--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -2,10 +2,6 @@
   display: block;
 }
 
-.main__catalog {
-  @include layout-padding;
-}
-
-.main__video {
-  margin-bottom: 58px;
+.main--catalog {
+  padding-bottom: 58px;
 }
