--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,17 +1,26 @@
 .contacts {
-  padding-top: 33px;
   padding-bottom: 40px;
 }
 
+.contacts__info {
+  @include layout-padding;
+
+  padding-top: 33px;
+  padding-bottom: 10px;
+}
+
 .contacts__title {
-  @include layout-padding;
+  @include margin-clean;
+
+  margin-bottom: 35px;
+  font-size: 18px;
+  font-weight: bold;
+  color: $primary-text;
 }
 
-.contacts__data {
-  @include layout-padding;
+// .contacts__data {
 
-  margin-bottom: 40px;
-}
+// }
 
 .contacts__row {
   display: flex;
