Сделал стилизацию состояний иконок соц сетей в social.scss

--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -7,6 +7,26 @@
   min-height: 80px;
 }
 
-.social__item:not(:last-child) {
-  margin-right: 40px;
+.social__item {
+  &:not(:last-child) {
+    margin-right: 23px;
+  }
+}
+
+.social__link {
+  display: block;
+  padding: 10px;
+
+  &:hover .social__icon path,
+  &:focus .social__icon path {
+    fill: #46c1ae;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
+}
+
+.social__icon {
+  display: block;
 }
