--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -21,3 +21,10 @@
 @mixin padding-clean {
   padding: 0;
 }
+
+@mixin title {
+  font-size: 25px;
+  line-height: 30px;
+  font-weight: bold;
+  color: $primary-text;
+}
