--- a/source/sass/blocks/datasheet.scss
+++ b/source/sass/blocks/datasheet.scss
@@ -3,14 +3,14 @@
   margin-bottom: 28px;
 
   border-spacing: 0;
-  border-color: none;
+  border: none;
 }
 
 .datasheet__cell {
   @include border-bottom;
 
   padding-top: 10px;
-  padding-bottom: 10px;
+  padding-bottom: 11px;
   line-height: 1.2;
 }
 
