--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -9,10 +9,11 @@
 }
 
 .footer__copyright {
+  width: 260px;
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 80px;
+  min-height: 73px;
 }
 
 .footer__link {
