--- a/source/sass/blocks/navigation.scss
+++ b/source/sass/blocks/navigation.scss
@@ -16,8 +16,8 @@
 
 .navigation__link {
   display: block;
-  padding-top: 25px;
-  padding-bottom: 25px;
+  padding-top: 27px;
+  padding-bottom: 27px;
   padding-left: 76px;
 
   font-size: 17px;
@@ -53,6 +53,7 @@
 }
 
 .navigation__icon {
+  // display: block;
   opacity: 0.2;
 }
 
