--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -5,12 +5,11 @@
 }
 
 .hero--main-page {
-  min-height: 489px;
-  padding-top: 70px;
+  padding-top: 71px;
 
   background-image: url("../img/hero-mobile@1x.jpg");
   background-repeat: no-repeat;
-  background-position: center -20px;
+  background-position: center -17px;
 }
 
 .hero--inner-page {
@@ -23,6 +22,8 @@
 .hero__title {
   @include margin-clean;
   @include layout-padding;
+
+  margin-bottom: 122px;
 
   font-size: 27px;
   line-height: 30px;
@@ -42,9 +43,9 @@
   @include list-style-clean;
 }
 
-.hero__item {
-  display: flex;
-}
+// .hero__item {
+
+// }
 
 .hero__link {
   display: flex;
@@ -52,7 +53,9 @@
   align-items: center;
   width: 100%;
   min-height: 103px;
-  padding-left: 30px;
+  padding-top: 18px;
+  padding-bottom: 18px;
+  padding-left: 29px;
 
   font-size: 19px;
   line-height: 24px;
@@ -97,9 +100,10 @@
 }
 
 .hero__icon--interior {
-  margin-right: 33px;
+  margin-top: 5px;
+  margin-right: 36px;
 }
 
 .hero__icon--toy {
-  margin-right: 28px;
+  margin-right: 27px;
 }
