--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -1,6 +1,7 @@
 .social {
   @include list-style-clean;
 
+  width: 260px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -9,7 +10,7 @@
 
 .social__item {
   &:not(:last-child) {
-    margin-right: 23px;
+    margin-right: 21px;
   }
 }
 
