--- a/source/sass/blocks/video.scss
+++ b/source/sass/blocks/video.scss
@@ -21,11 +21,12 @@
   padding-top: 25px;
   padding-right: 20px;
   padding-bottom: 23px;
-  padding-left: 20px;
+  padding-left: 23px;
 }
 
 .video__title-icon {
-  margin-right: 25px;
+  margin-left: 7px;
+  margin-right: 20px;
 
   & path {
     fill: #63d1bb;
@@ -51,8 +52,8 @@
   top: 50%;
   left: 50%;
 
-  border: none;
   background-color: transparent;
+  border: none;
   transform: translate(-50%, -50%);
   cursor: pointer;
 
@@ -68,15 +69,15 @@
 }
 
 .video__description {
-  padding-top: 30px;
-  padding-right: 35px;
-  padding-left: 35px;
+  padding-top: 28px;
+  padding-right: 33px;
+  padding-left: 33px;
 }
 
 .video__text {
   @include margin-clean;
 
-  margin-bottom: 30px;
+  margin-bottom: 25px;
 
   font-size: 13px;
   line-height: 24px;
