Убрал временные стили, добавил min-width

--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -1,9 +1,5 @@
 .page {
-  /* temp */
-  width: 320px;
-  margin: 0 auto;
-  outline: 2px solid red;
-  /* temp */
+  min-width: 320px;
 
   position: relative;
 
