--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,54 +1,3 @@
-.header__wrapper {
-  @include border-bottom;
-
-  position: relative;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 79px;
-}
-
-.header__logo-link {
-  display: block;
-}
-
-// .header__logo-picture {
-
-// }
-
-.header__logo-image {
-  width: 86px;
-  height: 35px;
-}
-
-.header__toggle {
-  position: absolute;
-  top: 50%;
-  right: 0;
-
-  display: block;
-  width: 21px;
-  height: 20px;
-  padding-top: 39px;
-  padding-right: 41px;
-  padding-bottom: 39px;
-  padding-left: 41px;
-
-  background-color: transparent;
-  border: none;
-  transform: translateY(-50%);
-  cursor: pointer;
-}
-
-.header__toggle--close {
-  background-image: url("../img/icon-menu-close.svg");
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-}
-
-.header__toggle--open {
-  background-image: url("../img/icon-menu-open.svg");
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
+.header {
+  background-color: #f9f9f9;
 }
