--- a/source/sass/blocks/navigation.scss
+++ b/source/sass/blocks/navigation.scss
@@ -1,17 +1,73 @@
-// .navigation {
-//
-// }
+// Блок логотипа
 
-// .navigation__wrapper {
-//   display: none;
-// }
+.navigation__logo {
+  @include border(bottom);
+
+  position: relative;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 79px;
+
+  background-color: #ffffff;
+}
+
+.navigation__logo-link {
+  display: block;
+}
+
+// Кнопка отображения меню в mobile версии
+
+.navigation__logo-toggle {
+  position: absolute;
+  top: 50%;
+  right: 0;
+
+  display: block;
+  width: 21px;
+  height: 20px;
+  padding-top: 39px;
+  padding-right: 41px;
+  padding-bottom: 39px;
+  padding-left: 41px;
+
+  background-color: transparent;
+  border: none;
+  transform: translateY(-50%);
+  cursor: pointer;
+}
+
+.navigation__logo-toggle--close {
+  background-image: url("../img/icon-menu-close.svg");
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+}
+
+.navigation__logo-toggle--open {
+  background-image: url("../img/icon-menu-open.svg");
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+}
+
+// Обертки списков навигации
+
+.navigation__wrapper-top {
+  background-color: #ffffff;
+}
+
+.navigation__wrapper-interactive {
+  background-color: #ffffff;
+}
+
+// Списки навигационных элементов и их элементы
 
 .navigation__list {
   @include list-style-clean;
 }
 
 .navigation__item {
-  @include border-bottom;
+  @include border(bottom);
 }
 
 .navigation__link {
@@ -53,8 +109,9 @@
   padding-left: 30px;
 }
 
+// Иконки у ссылок навигации
+
 .navigation__icon {
-  // display: block;
   opacity: 0.2;
 }
 
@@ -64,4 +121,111 @@
 
 .navigation__icon--cart {
   margin-right: 25px;
+}
+
+// Текст о доставке (скрыт на мобильных)
+
+.navigation__delivery {
+  display: none;
+}
+
+// TABLET
+
+@media (min-width: $tablet-width) {
+  .navigation {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  // Блок логотипа
+
+  .navigation__logo {
+    justify-content: flex-start;
+    width: 48.17%;
+    min-height: 89px;
+    padding-left: $tablet-padding;
+  }
+
+  // Кнопка отображения меню в mobile версии
+
+  .navigation__logo-toggle {
+    display: none;
+  }
+
+  // Обертки списков навигации
+
+  .navigation__wrapper-top {
+    order: 2;
+    margin-left: 32px;
+
+    background-color: transparent;
+  }
+
+  .navigation__wrapper-interactive {
+    @include border(bottom);
+
+    width: 51.83%;
+  }
+
+  // Списки навигационных элементов и их элементы
+
+  .navigation__list {
+    display: flex;
+  }
+
+  .navigation__item {
+    border-bottom: none;
+  }
+
+  .navigation__item--search {
+    @include border(left);
+  }
+
+  .navigation__item--basket {
+    @include border(left);
+  }
+
+  .navigation__link--top {
+    padding-top: 17px;
+    padding-right: 18px;
+    padding-bottom: 20px;
+    padding-left: 18px;
+
+    font-size: 15px;
+  }
+
+  .navigation__link--search {
+    padding-top: 32px;
+    padding-right: 32px;
+    padding-bottom: 32px;
+    padding-left: 32px;
+
+    font-size: 0;
+  }
+
+  .navigation__link--basket {
+    padding-top: 32px;
+    padding-right: 31px;
+    padding-bottom: 32px;
+    padding-left: 31px;
+  }
+
+  // Иконки у ссылок навигации
+
+  .navigation__icon--search {
+    margin-right: 0;
+  }
+
+  .navigation__icon--cart {
+    margin-right: 30px;
+  }
+
+  // Текст о доставке
+
+  .navigation__delivery {
+    display: block;
+    order: 3;
+    margin-left: auto;
+    margin-right: 50px;
+  }
 }
