--- a/source/sass/blocks/datasheet.scss
+++ b/source/sass/blocks/datasheet.scss
@@ -3,17 +3,31 @@
   margin-bottom: 28px;
 
   border-spacing: 0;
+
   border: none;
 }
 
 .datasheet__cell {
-  @include border-bottom;
+  @include border(bottom);
 
   padding-top: 10px;
   padding-bottom: 11px;
+
   line-height: 1.2;
 }
 
 .datasheet__cell--width {
   width: 100px;
+}
+
+// TABLET
+
+@media (min-width: $tablet-width) {
+  .datasheet {
+    margin-bottom: 28px;
+  }
+
+  .datasheet__cell--width {
+    width: 95px;
+  }
 }
