--- a/source/sass/blocks/featured.scss
+++ b/source/sass/blocks/featured.scss
@@ -1,24 +1,28 @@
-.featured {
-  &::after {
-    content: "";
+// Svg полоса внизу блока
 
-    display: block;
-    width: 100%;
-    height: 6px;
+.featured::after {
+  content: "";
 
-    background-image: url("../img/bg-zigzag-line.svg");
-    background-repeat: repeat-x;
-    background-position: 50% 0;
-    background-size: contain;
-  }
+  display: block;
+  width: 100%;
+  height: 6px;
+
+  background-image: url("../img/bg-zigzag-line.svg");
+  background-repeat: repeat-x;
+  background-position: 50% 0;
+  background-size: contain;
 }
 
+// Обертка для контента блока
+
 .featured__content {
-  @include layout-padding;
+  @include layout-padding($mobile-padding);
 
   padding-top: 27px;
   padding-bottom: 36px;
 }
+
+// Заголовок
 
 .featured__title {
   margin-bottom: 23px;
@@ -30,7 +34,7 @@
 
   margin-bottom: 5px;
 
-  letter-spacing: -0.5px;
+  letter-spacing: -0.5px; // Проблема с заголовком !!! Сделать Pixer Perfect не получается.
 }
 
 .featured__marker {
@@ -43,9 +47,7 @@
   text-transform: uppercase;
 }
 
-// .featured__info {
-//
-// }
+// Описание
 
 .featured__description {
   @include margin-clean;
@@ -55,18 +57,14 @@
   line-height: 24px;
 }
 
+// Картинка
+
 .featured__picture {
   display: block;
   margin-bottom: 24px;
 }
 
-// .featured__image {
-
-// }
-
-// .featured__buy {
-//
-// }
+// Блок цены
 
 .featured__price {
   @include margin-clean;
@@ -77,4 +75,96 @@
   line-height: 24px;
   font-weight: bold;
   text-align: center;
+}
+
+// TABLET
+
+@media (min-width: $tablet-width) {
+  // Svg полоса внизу блока
+  // TODO
+  .featured::after {
+    width: 100%;
+    height: 17px;
+
+    background-size: auto 17px;
+  }
+
+  // Обертка для контента блока
+
+  .featured__content {
+    @include layout-padding($tablet-padding);
+
+    position: relative;
+
+    padding-top: 47px;
+    padding-bottom: 53px;
+  }
+
+  // Заголовок
+
+  .featured__title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 44px;
+  }
+
+  .featured__name {
+    @include margin-clean;
+
+    margin-bottom: 5px;
+    margin-left: -3px;
+
+    font-size: 43px;
+    line-height: 50px;
+    letter-spacing: -1px; // Проблема с заголовком !!! Сделать Pixer Perfect не получается.
+  }
+
+  .featured__marker {
+    width: 72px;
+    margin-right: 27px;
+
+    line-height: 17px;
+    text-align: center;
+  }
+
+  // Описание
+
+  .featured__info {
+    width: 50%;
+    margin-bottom: 56px;
+    padding-right: 44px;
+  }
+
+  .featured__description {
+    min-height: 90px;
+    margin-bottom: 36px;
+
+    font-size: 17px;
+    line-height: 30px;
+  }
+
+  // Картинка
+
+  .featured__picture {
+    position: absolute;
+    top: 154px;
+    right: 51px;
+
+    margin-bottom: 0;
+  }
+
+  // Блок цены
+
+  .featured__buy {
+    width: 50%;
+    padding-right: 44px;
+  }
+
+  .featured__price {
+    margin-bottom: 34px;
+
+    font-size: 20px;
+    text-align: center;
+  }
 }
