--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -1,24 +1,28 @@
-.reviews {
-  &::after {
-    content: "";
+// Svg полоса внизу блока
 
-    display: block;
-    width: 100%;
-    height: 6px;
+.reviews::after {
+  content: "";
 
-    background-image: url("../img/bg-zigzag-line.svg");
-    background-repeat: repeat-x;
-    background-position: 50% 0;
-    background-size: contain;
-  }
+  display: block;
+  width: 100%;
+  height: 6px;
+
+  background-image: url("../img/bg-zigzag-line.svg");
+  background-repeat: repeat-x;
+  background-position: 50% 0;
+  background-size: contain;
 }
 
+// Обертка для контента блока
+
 .reviews__content {
-  @include layout-padding;
+  @include layout-padding($mobile-padding);
 
   padding-top: 16px;
   padding-bottom: 45px;
 }
+
+// Заголовок
 
 .reviews__title {
   @include margin-clean;
@@ -27,14 +31,7 @@
   margin-bottom: 24px;
 }
 
-.reviews__list {
-  @include list-style-clean;
-  margin-bottom: 29px;
-}
-
-// .reviews__item {
-
-// }
+// Текст отзыва
 
 .reviews__text {
   @include margin-clean;
@@ -42,23 +39,32 @@
   margin-bottom: 27px;
 }
 
+// Автор
+
+.reviews__author {
+  margin-bottom: 29px;
+}
+
 .reviews__author-name {
   @include margin-clean;
 
   margin-bottom: 3px;
+
   font-size: 17px;
   line-height: 24px;
   font-weight: bold;
-  font-style: normal;
 }
 
 .reviews__author-link {
   display: block;
+
   font-size: 17px;
   line-height: 30px;
   font-weight: normal;
   color: $primary-text;
 }
+
+// Переключатели отзывов
 
 .reviews__toggles {
   @include margin-clean;
@@ -79,8 +85,6 @@
   cursor: pointer;
 }
 
-//TODO: эффекты при ховере/активе для table/desktop
-
 .reviews__toggle--left {
   background-image: url("../img/icon-left-arrow.svg");
 }
@@ -91,4 +95,114 @@
 
 .reviews__toggle:first-child {
   border-right: none;
+}
+
+// TABLET
+
+@media (min-width: $tablet-width) {
+  // Фон блока
+
+  .reviews {
+    background-image: url("../img/review@1x.jpg");
+    background-repeat: no-repeat;
+    background-position: 0 0;
+  }
+
+  // Svg полоса внизу блока
+
+  .reviews::after {
+    height: 17px;
+
+    background-size: auto 17px;
+  }
+
+  // Обертка для контента блока
+
+  .reviews__content {
+    @include layout-padding($tablet-padding);
+
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding-top: 77px;
+    padding-bottom: 85px;
+  }
+
+  // Заголовок
+
+  .reviews__title {
+    @include margin-clean;
+
+    flex-grow: 1;
+    order: 1;
+    margin-bottom: 49px;
+    margin-left: -5px;
+
+    font-size: 43px;
+    line-height: 50px;
+  }
+
+  // Текст отзыва
+
+  .reviews__text {
+    order: 3;
+    margin-bottom: 57px;
+
+    font-size: 17px;
+  }
+
+  // Автор
+
+  .reviews__author {
+    flex-grow: 1;
+    order: 4;
+  }
+
+  .reviews__author-name {
+    margin-bottom: 4px;
+
+    font-size: 18px;
+  }
+
+  .reviews__author-link {
+    width: 300px;
+
+    font-size: 17px;
+    line-height: 30px;
+    font-weight: normal;
+    color: $primary-text;
+  }
+
+  // Переключатели отзывов
+
+  .reviews__toggles {
+    @include margin-clean;
+
+    display: flex;
+    order: 5;
+  }
+
+  .reviews__toggle {
+    width: 88px;
+    height: 55px;
+
+    border: none;
+
+    &:hover,
+    &:focus {
+      opacity: 0.6;
+    }
+
+    &:active {
+      opacity: 0.3;
+    }
+  }
+
+  // Кнопка
+
+  .reviews__write {
+    order: 2;
+    align-self: flex-start;
+    width: 175px;
+  }
 }
